Fix CSS selector for board styling

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     background: #f0f0f0;
     font-family: sans-serif;
   }
-  #board {
+  board {
     display: grid;
     grid-template-columns: repeat(8, 60px);
     grid-template-rows: repeat(8, 60px);
@@ -33,4 +33,3 @@
   }
   .black { background: black; }
   .white { background: white; }
-</style>
